--- a/main.scss
+++ b/main.scss
@@ -6,13 +6,15 @@ body {
   background-color: #f0f0f0;
   margin: 0;
   padding: 0;
-}
-
-header {
   background-color: --primary-bg-color;
   background-image: $background-image;
   background-attachment: fixed;
   background-size: cover;
+  height: 100%;
+  background-position: center right;
+}
+
+header {
   color: black;
   padding: 1rem;
   text-align: center;
@@ -21,11 +23,7 @@ header {
 
 main {
   padding: 0.2rem;
-  background-color: --primary-bg-color;
-  background-image: $background-image;
-  background-attachment: fixed;
-  background-size: cover;
-  height: 65svh;
+  height: auto;
 }
 
 .games {
@@ -35,10 +33,6 @@ main {
 }
 
 .game {
-  background-color: --primary-bg-color;
-  background-image: $background-image;
-  background-attachment: fixed;
-  background-size: cover;
   border: 1px solid black;
   border-radius: 8px;
   margin: 1rem;
@@ -55,19 +49,14 @@ main {
 
 .game img {
   width: 100%;
-  height: 76%;
+  height: 70%;
   border-radius: 8px 8px 0 0;
 }
 
 .game h2 {
   color: wheat;
-
   text-align: center;
   font-size: 1.4rem;
-  background-color: --primary-bg-color;
-  background-image: $background-image;
-  background-attachment: fixed;
-  background-size: cover;
   border-radius: 8px;
   animation: parpadeo 2s infinite;
 
@@ -84,11 +73,6 @@ main {
 
 .footer {
   text-align: center;
-  background-color: --primary-bg-color;
-  background-image: $background-image;
-  background-attachment: fixed;
-  background-size: cover;
-
   display: flex;
   flex-direction: column;
   padding: 10px 0px;
@@ -109,7 +93,6 @@ main {
     flex-wrap: wrap;
     text-decoration: none;
     align-content: center;
-
     box-shadow: 16px 0px 16px rgba(0, 0, 0, 0.7);
     transition: transform 0.2s;
   }
