--- a/src/componentes/mediaquery.scss
+++ b/src/componentes/mediaquery.scss
@@ -1,10 +1,10 @@
 @media screen and (max-width: 750px) {
   .games {
-    height: 750px;
+    height: auto;
   }
   .game {
-    width: 170px;
-    height: 240px;
+    width: auto;
+    height: auto;
 
     h2 {
       background-color: aqua;
@@ -14,12 +14,12 @@
 }
 @media screen and (max-width: 475px) {
   .games {
-    height: 410px;
-    width: 100%;
+    height: auto;
+    width: auto;
   }
 
   .game {
-    height: 110px;
+    height: auto;
     h2 {
       font-size: 0.5rem;
       margin-top: 0;
