feat arreglo parpadeo

--- a/src/componentes/mediaquery.scss
+++ b/src/componentes/mediaquery.scss
@@ -22,7 +22,7 @@
     height: auto;
     h2 {
       font-size: 0.5rem;
-      margin-top: 0;
+      text-align: center;
     }
     img {
       height: 40px;
