feat cambiando estilos

--- a/main.scss
+++ b/main.scss
@@ -40,7 +40,7 @@ main {
   width: 300px;
   cursor: pointer;
   transition: transform 0.2s;
-  box-shadow: 16px 16px 16px 16px rgba(0, 0, 0, 0.7);
+  box-shadow: 8px 8px rgba(0, 0, 0, 0.7);
 }
 
 .game:hover {
