--- a/main.scss
+++ b/main.scss
@@ -49,14 +49,14 @@ main {
 
 .game img {
   width: 100%;
-  height: 70%;
+  height: 80%;
   border-radius: 8px 8px 0 0;
 }
 
 .game h2 {
-  color: wheat;
+  display: block;
+  color: white;
   text-align: center;
-  font-size: 1.4rem;
   border-radius: 8px;
   animation: parpadeo 1.5s infinite;
 
@@ -85,7 +85,7 @@ main {
   transition: transform 0.2s;
 
   .contactos {
-    background-color: rgb(211, 77, 77);
+    background-color: rgb(94, 219, 247);
     color: var(--text-color);
     border-radius: 8px;
     height: 30px;
@@ -114,7 +114,7 @@ main {
   padding: 0.5rem 1rem;
   border: none;
   border-radius: 5px;
-  background-color: orangered;
+  background-color: rgb(94, 219, 247);
   color: white;
   cursor: pointer;
   transition: background-color 0.3s;
