--- a/main.scss
+++ b/main.scss
@@ -93,7 +93,7 @@ main {
     flex-wrap: wrap;
     text-decoration: none;
     align-content: center;
-    box-shadow: 16px 0px 16px rgba(0, 0, 0, 0.7);
+    box-shadow: 8px 8px rgba(0, 0, 0, 0.7);
     transition: transform 0.2s;
   }
   a:hover {
