--- a/main.scss
+++ b/main.scss
@@ -1,9 +1,11 @@
 @import './src/componentes/variables.scss';
 @import './src/componentes/mediaquery.scss';
+@import './src/componentes/musica.scss';
+@import './src/componentes/footer.scss';
+@import './src/componentes/games.scss';
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
   margin: 0;
   padding: 0;
   background-color: --primary-bg-color;
@@ -15,115 +17,12 @@ body {
 }
 
 header {
-  color: black;
-  padding: 1rem;
+  padding: $primary-padding;
   text-align: center;
-  text-shadow: blue;
+  text-shadow: $primary-text-shadow;
 }
 
 main {
-  padding: 0.2rem;
+  padding: $secundary-padding;
   height: auto;
-}
-
-.games {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-}
-
-.game {
-  border: 1px solid black;
-  border-radius: 8px;
-  margin: 1rem;
-  text-align: center;
-  width: 300px;
-  cursor: pointer;
-  transition: transform 0.2s;
-  box-shadow: 8px 8px rgba(0, 0, 0, 0.7);
-}
-
-.game:hover {
-  transform: scale(1.15);
-}
-
-.game img {
-  width: 100%;
-  height: 80%;
-  border-radius: 8px 8px 0 0;
-}
-
-.game h2 {
-  display: block;
-  color: white;
-  text-align: center;
-  border-radius: 8px;
-  animation: parpadeo 1.5s infinite;
-
-  @keyframes parpadeo {
-    0%,
-    100% {
-      opacity: 1;
-    }
-    50% {
-      opacity: 0;
-    }
-  }
-}
-
-.footer {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  padding: 10px 0px;
-  flex-wrap: wrap;
-}
-.footer-buttons {
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
-  transition: transform 0.2s;
-
-  .contactos {
-    background-color: rgb(94, 219, 247);
-    color: var(--text-color);
-    border-radius: 8px;
-    height: 30px;
-    padding: 5px 10px;
-    flex-wrap: wrap;
-    text-decoration: none;
-    align-content: center;
-    box-shadow: 8px 8px rgba(0, 0, 0, 0.7);
-    transition: transform 0.2s;
-  }
-  a:hover {
-    background-color: rgb(90, 22, 90);
-    transform: scale(1.15);
-    color: white;
-  }
-}
-.music-controls {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-  margin-top: 1rem;
-}
-
-#playPauseBtn {
-  padding: 0.5rem 1rem;
-  border: none;
-  border-radius: 5px;
-  background-color: rgb(94, 219, 247);
-  color: white;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-#playPauseBtn:hover {
-  background-color: #45a049;
-}
-
-#volumeControl {
-  width: 100px;
 }
