--- a/src/componentes/mediaquery.scss
+++ b/src/componentes/mediaquery.scss
@@ -7,7 +7,7 @@
     height: 270px;
 
     h2 {
-      background-color: rgb(94, 219, 247);
+      background-color: $secundary-bg-color;
     }
   }
 }
