--- a/main.scss
+++ b/main.scss
@@ -3,6 +3,7 @@
 @import './src/componentes/musica.scss';
 @import './src/componentes/footer.scss';
 @import './src/componentes/games.scss';
+@import './src/componentes/createBall.scss';
 
 body {
   font-family: Arial, sans-serif;
@@ -25,33 +26,4 @@ header {
 main {
   padding: $secundary-padding;
   height: auto;
-}
-
-.balls-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-  overflow: hidden;
-  z-index: -1000;
-}
-
-.ball {
-  position: absolute;
-  border-radius: 50%;
-  background-color: rgba(230, 106, 11, 0.7);
-  animation: bounce 5s infinite;
-  opacity: 0.2;
-}
-
-@keyframes bounce {
-  0%,
-  100% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-100px);
-  }
 }
